input[type=radio] alignment fix

--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -85,7 +85,7 @@ input[type=radio], input[type=checkbox]
 {
     height: auto;
     width: auto;
-    margin: 0;
+    margin: 0 0 0 2px;
     padding: 0;
 }
 .standarditem .quantity .optionRight input
@@ -547,7 +547,7 @@ html > body*#col-two-order-summary-inside
 .order-summary-delivery-options input
 {
     float: left;
-    margin: 0 10px 0 0;
+    margin: 0 10px 0 2px;
 }
 #orderdetail .order-summary-shipping-to .OrderSummaryHdr
 {
